welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:10: error: type mismatch;
 found   : String
 required: java.awt.Color
    var c :Color = litMessage()
                             ^Array1:11: error: value c is not a member of object java.awt.Color
    T(i)=(Color.c)
                ^